blocked out the ui

--- a/TunicGlyphLibrary/Windows/Elements/LanguageGlyphControl.xaml
+++ b/TunicGlyphLibrary/Windows/Elements/LanguageGlyphControl.xaml
@@ -7,7 +7,8 @@
              mc:Ignorable="d" 
              d:DesignHeight="310" d:DesignWidth="200">
     <Grid>
-        <Canvas Name="canvas" Width="200" Height="304">
+        <Canvas Name="canvas" Width="200" Height="307">
+            <Rectangle Name="GlyphHighLight" Canvas.Left="0" Canvas.Top="0" Fill="RosyBrown" Width="200" Height="307"></Rectangle>
             <Rectangle Panel.ZIndex="18" Name= "base" Width="200" Height="10" Fill="LightGray" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <Rectangle Name="BottomMiddle" Tag="10" Width="10" Height="121" Fill="Gray" Canvas.Top="145" RadiusX="5" RadiusY="5" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="95" MouseLeftButtonDown="GlyphPartClick" MouseEnter="GlyphPartMouseEnter" MouseLeave="GlyphPartMouseLeave"/>
             <Rectangle Name="TopMiddle" Tag="1" Width="10" Height="125" Fill="Gray" RadiusX="5" RadiusY="5" Canvas.Left="95" HorizontalAlignment="Center" VerticalAlignment="Top" MouseLeftButtonDown="GlyphPartClick" MouseEnter="GlyphPartMouseEnter" MouseLeave="GlyphPartMouseLeave"/>
