--- a/TunicGlyphLibrary/App.xaml
+++ b/TunicGlyphLibrary/App.xaml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Application 
     p1:Class="TunicGlyphLibrary.App" 
-    StartupUri="MainWindow.xaml" 
+    StartupUri="/Windows/MainWindow.xaml" 
     xmlns:p1="http://schemas.microsoft.com/winfx/2006/xaml" 
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     
