--- a/TunicGlyphLibrary/Windows/Editors/WordEditor.xaml
+++ b/TunicGlyphLibrary/Windows/Editors/WordEditor.xaml
@@ -1,9 +1,8 @@
-﻿<UserControl x:Class="TunicGlyphLibrary.Windows.Elements.Editors.WordEditor"
+﻿<UserControl x:Class="TunicGlyphLibrary.Windows.Editors.WordEditor"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:TunicGlyphLibrary.Windows.Elements.Editors"
              xmlns:elements="clr-namespace:TunicGlyphLibrary.Windows.Elements"
              mc:Ignorable="d"
              Background="Transparent"
@@ -14,8 +13,8 @@
             <RowDefinition/>
         </Grid.RowDefinitions>
             
-        <Rectangle Panel.ZIndex = "0" Fill="Bisque" Margin="0" RadiusX="10" RadiusY="10" Grid.RowSpan="2"></Rectangle>
-        <Grid Name="WordEditorGrid" Background="Transparent" Grid.Row="0" MouseEnter="WordEditorPanel_OnMouseEnter" MouseLeave="WordEditorPanel_OnMouseLeave">
+        <Rectangle Panel.ZIndex = "0" Fill="White" Opacity="0.25" Margin="0" RadiusX="10" RadiusY="10" Grid.RowSpan="2"></Rectangle>
+        <Grid Background="Transparent" Grid.Row="0" MouseEnter="WordEditorPanel_OnMouseEnter" MouseLeave="WordEditorPanel_OnMouseLeave">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="8*"/>
@@ -29,7 +28,7 @@
         </Grid>
         <Grid Grid.Row="1" Background="Transparent" MouseEnter="DefinitionEditorGrid_OnMouseEnter" MouseLeave="DefinitionEditorGrid_OnMouseLeave">
             <Button Panel.ZIndex="20" Name="DefinitionSearchBtn" Visibility="Hidden" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10">S</Button>
-            <elements:LanguageDefinitionsControl></elements:LanguageDefinitionsControl>
+            <elements:DefinitionsEditor x:Name="DefinitionsEditor"></elements:DefinitionsEditor>
         </Grid>
     </Grid>
 </UserControl>
