--- a/TunicGlyphLibrary/Windows/Elements/LanguageGlyphControl.xaml
+++ b/TunicGlyphLibrary/Windows/Elements/LanguageGlyphControl.xaml
@@ -1,14 +1,14 @@
-﻿<UserControl x:Class="TunicGlyphLibrary.LanguageGlyphControl"
+﻿<UserControl x:Class="TunicGlyphLibrary.Windows.Elements.LanguageGlyphControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:TunicGlyphLibrary"
+             xmlns:local="clr-namespace:TunicGlyphLibrary.Windows.Elements"
              mc:Ignorable="d" 
              d:DesignHeight="310" d:DesignWidth="200">
     <Grid>
         <Canvas Name="canvas" Width="200" Height="307">
-            <Rectangle Name="GlyphHighLight" Canvas.Left="0" Canvas.Top="0" Fill="RosyBrown" Width="200" Height="307"></Rectangle>
+            <Rectangle Name="GlyphHighLight" Canvas.Left="0" Canvas.Top="0" Fill="RosyBrown" Width="200" Height="307" Visibility="Hidden"></Rectangle>
             <Rectangle Panel.ZIndex="18" Name= "base" Width="200" Height="10" Fill="LightGray" Canvas.Top="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
             <Rectangle Name="BottomMiddle" Tag="10" Width="10" Height="121" Fill="Gray" Canvas.Top="145" RadiusX="5" RadiusY="5" HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="95" MouseLeftButtonDown="GlyphPartClick" MouseEnter="GlyphPartMouseEnter" MouseLeave="GlyphPartMouseLeave"/>
             <Rectangle Name="TopMiddle" Tag="1" Width="10" Height="125" Fill="Gray" RadiusX="5" RadiusY="5" Canvas.Left="95" HorizontalAlignment="Center" VerticalAlignment="Top" MouseLeftButtonDown="GlyphPartClick" MouseEnter="GlyphPartMouseEnter" MouseLeave="GlyphPartMouseLeave"/>
@@ -84,7 +84,7 @@
                     </TransformGroup>
                 </Rectangle.RenderTransform>
             </Rectangle>
-            <Rectangle Name="TopTopRight" Tag="2" Width="10" Height="119" Fill="Gray" Canvas.Top="-27" RadiusX="5" RadiusY="5" Canvas.Left="143" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" MouseLeftButtonDown="GlyphPartClick" MouseEnter="GlyphPartMouseEnter" MouseLeave="GlyphPartMouseLeave">
+            <Rectangle Name="TopTopRight" Tag="2" Width="10" Height="119" Canvas.Top="-27" RadiusX="5" RadiusY="5" Canvas.Left="143" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" MouseLeftButtonDown="GlyphPartClick" MouseEnter="GlyphPartMouseEnter" MouseLeave="GlyphPartMouseLeave">
                 <Rectangle.RenderTransform>
                     <TransformGroup>
                         <ScaleTransform/>
