--- a/TunicGlyphLibrary/Windows/Elements/LanguageWordControl.xaml
+++ b/TunicGlyphLibrary/Windows/Elements/LanguageWordControl.xaml
@@ -1,19 +1,12 @@
-﻿<UserControl x:Class="TunicGlyphLibrary.LanguageWordControl"
+﻿<UserControl x:Class="TunicGlyphLibrary.Windows.Elements.LanguageWordControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:local="clr-namespace:TunicGlyphLibrary"
+             xmlns:local="clr-namespace:TunicGlyphLibrary.Windows.Elements"
              mc:Ignorable="d"
-             d:DesignHeight="400" d:DesignWidth="600
-             ">
+             d:DesignHeight="400" d:DesignWidth="600">
     <Viewbox Stretch="Uniform" Margin="5, 5, 0 ,0">
-        <StackPanel Name="glyphStack" Orientation="Horizontal" Margin="50, 50">
-            <local:LanguageGlyphControl/>
-            <local:LanguageGlyphControl/>
-            <local:LanguageGlyphControl/>
-            <local:LanguageGlyphControl/>
-
-        </StackPanel>
+        <StackPanel Name="glyphStack" Orientation="Horizontal" Margin="50, 50"></StackPanel>
     </Viewbox>
 </UserControl>
