--- a/TunicGlyphLibrary/Windows/Elements/WordLibraryDisplay.xaml
+++ b/TunicGlyphLibrary/Windows/Elements/WordLibraryDisplay.xaml
@@ -5,8 +5,8 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:local="clr-namespace:TunicGlyphLibrary.Windows.Elements"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
-    <Grid>
-        
-    </Grid>
+             d:DesignHeight="600" d:DesignWidth="300">
+    <ScrollViewer Background="RosyBrown">
+        <StackPanel Name="WordLibraryList" Orientation="Vertical"></StackPanel>
+    </ScrollViewer>
 </UserControl>
