--- a/TunicGlyphLibrary/Windows/MainWindow.xaml
+++ b/TunicGlyphLibrary/Windows/MainWindow.xaml
@@ -1,34 +1,27 @@
-﻿<Window x:Class="TunicGlyphLibrary.MainWindow"
+﻿<Window x:Class="TunicGlyphLibrary.Windows.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:TunicGlyphLibrary"
+        xmlns:elements="clr-namespace:TunicGlyphLibrary.Windows.Elements"
+        xmlns:editors="clr-namespace:TunicGlyphLibrary.Windows.Editors"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="950">
+        Background="Black"
+        Title="MainWindow" Height="600" Width="950">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5*"/>
             <ColumnDefinition Width="2*"/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Grid>
+        <Grid Column="0">
             <Grid.RowDefinitions>
-                <RowDefinition Height="2*"/>
+                <RowDefinition Height="10*"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-
-            <local:LanguageWordControl></local:LanguageWordControl>
-            
+            <editors:WordEditor x:Name="WordEditor" Grid.Column="0"></editors:WordEditor>
+            <Button Grid.Row="1" Click="SaveToLibraryBtn_OnClick">Done</Button>
         </Grid>
-        <ScrollViewer Grid.Column="1">
-            <ItemsControl>
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <WrapPanel />
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            </ItemsControl>
-        </ScrollViewer>
+        <elements:WordLibraryDisplay x:Name="WordLibraryList" Grid.Column="1"></elements:WordLibraryDisplay>
     </Grid>
 </Window>
