--- a/TunicGlyphLibrary/Windows/Editors/WordEditorControl.xaml
+++ b/TunicGlyphLibrary/Windows/Editors/WordEditorControl.xaml
@@ -24,7 +24,7 @@
             <elements:GlyphCountPlusButton x:Name="AddGlyphBtn" Grid.Column="2" Click="AddGlyphBtn_OnClick"></elements:GlyphCountPlusButton>
             <Button Name="GlyphSearchBtn" Visibility="Hidden" Grid.Column="2" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10">S</Button>
         </Grid>
-        <Grid Grid.Row="1" Background="Transparent" MouseEnter="DefinitionEditorGrid_OnMouseEnter" MouseLeave="DefinitionEditorGrid_OnMouseLeave">
+        <Grid Margin="0, 6, 0, 0" Grid.Row="1" Background="Transparent" MouseEnter="DefinitionEditorGrid_OnMouseEnter" MouseLeave="DefinitionEditorGrid_OnMouseLeave">
             <Button Panel.ZIndex="20" Name="DefinitionSearchBtn" Visibility="Hidden" Width="30" Height="30" HorizontalAlignment="Right" VerticalAlignment="Top" Margin="10">S</Button>
             <elements:DefinitionsEditorControl x:Name="DefinitionsEditor"></elements:DefinitionsEditorControl>
         </Grid>
