--- a/TunicGlyphLibrary/Windows/Panels/DefinitionsEditorControl.xaml
+++ b/TunicGlyphLibrary/Windows/Panels/DefinitionsEditorControl.xaml
@@ -9,19 +9,18 @@
              d:DesignHeight="200" d:DesignWidth="450">
     <Grid Name="DefinitionEditorGrid" Background="Transparent" Grid.Row="1">
         <Grid.RowDefinitions>
-            <RowDefinition Height="3*"/>
-            <RowDefinition/>
+            <RowDefinition Height="5*"/>
+            <RowDefinition Height="2*"/>
         </Grid.RowDefinitions>
-                
         <WrapPanel Name="DefinitionsStack" Grid.Row="0" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"></WrapPanel>
                 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="5*"/>
                 <ColumnDefinition Width="2*"/>
-                <ColumnDefinition/>
             </Grid.ColumnDefinitions>
-            <local:StyledTextBox x:Name="DefinitionTextBox" Grid.Column="0" Margin="10, 0 ,5 ,0" OnTextChanged="DefinitionTextBox_OnTextChanged"></local:StyledTextBox>
-            <local:StyledButton x:Name="AddDefinitionBtn" Grid.Column="1" Margin="5, 0, 10, 0" Click="AddDefinitionBtn_OnClick" IsEnabled="False"></local:StyledButton>
+            <local:StyledTextBox x:Name="DefinitionTextBox" Grid.Column="0" Margin="5, 0 ,2.5 ,0" OnTextChanged="DefinitionTextBox_OnTextChanged"></local:StyledTextBox>
+            <local:StyledButton x:Name="AddDefinitionBtn" Grid.Column="1" Margin="2.5, 0, 5, 0" Text="Add" Click="AddDefinitionBtn_OnClick" IsEnabled="True"></local:StyledButton>
         </Grid>
     </Grid>
 </UserControl>
