--- a/TunicGlyphLibrary/Windows/Editors/WordEditorControl.xaml
+++ b/TunicGlyphLibrary/Windows/Editors/WordEditorControl.xaml
@@ -21,6 +21,7 @@
                     <ColumnDefinition Width="8*"/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
+                
                 <elements:LanguageWordControl x:Name="WordDisplay" Grid.Column="1" ></elements:LanguageWordControl>
                 
                 <elements:GlyphCountMinusButton x:Name="RemoveGlyphBtn" Grid.Column="0" Click="RemoveGlyphBtn_OnClick"></elements:GlyphCountMinusButton>
@@ -28,19 +29,21 @@
             </Grid>
             <StackPanel Name="WordDisplayUtility" Visibility="Hidden" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
                 <elements:StyledMiniButton x:Name="GlyphClearBtn" IconUri="../../Resources/Cross.png" Margin="5" Click="GlyphClearBtn_OnClick"/>
-                <elements:StyledMiniButton x:Name="GlyphSearchBtn" IconUri="../../Resources/SearchIcon.png" Margin="5" Click="GlyphSearchBtn_OnClick"/>
+                <elements:StyledMiniButton x:Name="GlyphSearchBtn" IconUri="../../Resources/SearchIcon.png" Margin="5" Click="GlyphSearchBtn_OnClick"
+                                           Visibility="Collapsed"/>
             </StackPanel>
         </Grid>
         <Grid Margin="0, 6, 0, 0" Grid.Row="1" Background="Transparent" MouseEnter="DefinitionEditorGrid_OnMouseEnter" MouseLeave="DefinitionEditorGrid_OnMouseLeave">
             <elements:DefinitionsEditorControl x:Name="DefinitionsEditor"></elements:DefinitionsEditorControl>
             <StackPanel Name="DefPanelUtility" Visibility="Hidden" Panel.ZIndex="20" Orientation="Horizontal" HorizontalAlignment="Right" VerticalAlignment="Top">
                 <elements:StyledMiniButton x:Name="DefinitionClearBtn" IconUri="../../Resources/Cross.png" Margin="5" Click="DefinitionClearBtn_OnClick"/>
-                <elements:StyledMiniButton x:Name="DefinitionSearchBtn" IconUri="../../Resources/SearchIcon.png"  Margin="5" Click="DefinitionSearchBtn_OnClick"/>
+                <elements:StyledMiniButton x:Name="DefinitionSearchBtn" IconUri="../../Resources/SearchIcon.png"  Margin="5" Click="DefinitionSearchBtn_OnClick"
+                                           Visibility="Collapsed"/>
             </StackPanel>
         </Grid>
         <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Center">
-            <elements:StyledButton x:Name="DoneBtn" Margin="5" Width="160" Text="Done" Click="SaveToLibraryBtn_OnClick"></elements:StyledButton>
-            <elements:StyledButton x:Name="CancelBtn" Margin="5" Width="160" Text="Cancel" Visibility="Collapsed" Click="CancelBtn_OnClick"></elements:StyledButton>
+            <elements:StyledButton x:Name="DoneBtn" Margin="5" Width="160" Text="Done" Click="SaveToLibraryBtn_OnClick"/>
+            <elements:StyledButton x:Name="CancelBtn" Margin="5" Width="160" Text="Cancel" Visibility="Collapsed" Click="CancelBtn_OnClick"/>
         </StackPanel>
     </Grid>
 </UserControl>
