--- a/TunicGlyphLibrary/Windows/Panels/DefinitionsEditorControl.xaml
+++ b/TunicGlyphLibrary/Windows/Panels/DefinitionsEditorControl.xaml
@@ -12,7 +12,8 @@
             <RowDefinition Height="3*"/>
             <RowDefinition Height="1*"/>
         </Grid.RowDefinitions>
-        <WrapPanel Name="DefinitionsStack" Grid.Row="0" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"></WrapPanel>
+        
+        <WrapPanel Name="DefinitionsStack" Grid.Row="0" Margin="5" HorizontalAlignment="Center" VerticalAlignment="Center"/>
                 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
